[REFACTOR] 서재 평가 생성의 책임을 서재, 키워드, 매력 포인트 각각 분리